# crunchy-mining

./: .env.example  .gitignore  app.py  classification.py  cleaning.py  clustering.py  data_warehouse.html  data_warehouse.py  eda-2.py  eda.py  fp_growth.html  fp_growth.py  notebook.py  pyproject.toml  regression-GA.py  regression-Log.py  regression-SBA.py  regression-SBA_Drep.py  regression.ipynb  regression.py  run_experiments.py
.mlflow/: .gitignore  basic_auth.ini.example
conf/experiment/: _default.yaml  preprocessing_v1.yaml  preprocessing_v2.yaml  preprocessing_v3.yaml  preprocessing_v4.yaml  preprocessing_v5.yaml  preprocessing_v6.yaml  preprocessing_v7.yaml  resampling_v1.yaml  resampling_v2.yaml  resampling_v3.yaml  resampling_v4.yaml  resampling_v5.yaml  resampling_v6.yaml  resampling_v7.yaml  resampling_v8.yaml  sampler_v1.yaml  sampling_v1.yaml  sampling_v2.yaml
conf/experiment_bank/: _default.yaml  preprocessing_v1.yaml  preprocessing_v10.yaml  preprocessing_v11.yaml  preprocessing_v2.yaml  preprocessing_v3.yaml  preprocessing_v4.yaml  preprocessing_v5.yaml  preprocessing_v6.yaml  preprocessing_v7.yaml  preprocessing_v8.yaml  preprocessing_v9.yaml  sampling_v1.yaml  sampling_v2.yaml
conf/experiment_sba/: _default.yaml  preprocessing_v1.yaml  preprocessing_v10.yaml  preprocessing_v11.yaml  preprocessing_v2.yaml  preprocessing_v3.yaml  preprocessing_v4.yaml  preprocessing_v5.yaml  preprocessing_v6.yaml  preprocessing_v7.yaml  preprocessing_v8.yaml  preprocessing_v9.yaml  sampling_v1.yaml  sampling_v2.yaml
crunchy_mining/: mlflow_util.py  pipeline.py  reg_pipeline.py  regpipeline.py  util.py  vis.py
crunchy_mining/pages/: evaluation_one.py  evaluation_summary.py  evaluation_two.py  fragments.py  interpretation.py  visualization.py
crunchy_mining/preprocessing/: base_preprocessor.py  preprocessors.py  reg_preprocessors.py
crunchy_mining/sampling/: base_sampler.py  reg_samplers.py  samplers.py
data/: states.csv
pages/: interpretation.py  visualization.py
src/: mlflow.py  pipeline.py  regpipeline.py  util.py
src/preprocessing/: base_preprocessor.py  preprocessors.py
