[project]
name = "crunchy-mining"
version = "0.1.0"
dependencies = [
    "altair[all]>=5.3.0",
    "catboost>=1.2.3",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.4",
    "mlflow>=2.12.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "setuptools>=69.5.1",
    "streamlit>=1.33.0",
    "vegafusion-jupyter[embed]>=1.6.6",
    "vegafusion[embed]>=1.6.6",
    "xgboost>=2.0.3",
]
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "jupyterlab-code-formatter>=2.2.1",
    "jupyterlab-git>=0.50.0",
    "jupyterlab>=4.1.6",
    "jupytext>=1.16.1",
]

[tool.rye.scripts]
start-mlflow = 'mlflow ui --backend-store-uri sqlite:///.mlflow/mlflow.db'
clean-mlflow = 'mlflow gc --backend-store-uri sqlite:///.mlflow/mlflow.db'

[tool.ruff.lint.isort]
force-single-line = true
