[project]
name = "crunchy-mining"
version = "0.1.0"
dependencies = [
    "altair[all]>=5.3.0",
    "catboost>=1.2.3",
    "duckdb>=1.0.0",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.12.2",
    "itables>=2.1.0",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.4",
    "mlflow>=2.12.2",
    "nltk>=3.8.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.3",
    "pandas>=2.2.2",
    "pandera>=0.19.2",
    "pip>=24.0",
    "pyspark>=3.5.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "setuptools>=69.5.1",
    "shap>=0.45.0",
    "st-pages>=0.4.5",
    "streamlit>=1.33.0",
    "tqdm>=4.66.2",
    "vegafusion-jupyter[embed]>=1.6.6",
    "vegafusion[embed]>=1.6.6",
    "xgboost>=2.0.3",
    "ydata-profiling>=4.8.3",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crunchy_mining"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "jupyterlab-code-formatter>=2.2.1",
    "jupyterlab-git>=0.50.0",
    "jupyterlab>=4.2.0",
    "jupytext>=1.16.1",
]

[tool.rye.scripts]
start-mlflow = 'mlflow server --backend-store-uri sqlite:///.mlflow/mlflow.db --default-artifact-root=.mlflow/mlruns --host 0.0.0.0 --port 5001'
start-mlflow-auth = { cmd = 'mlflow server --app-name basic-auth --backend-store-uri sqlite:///.mlflow/mlflow.db --default-artifact-root=.mlflow/mlruns --host 0.0.0.0 --port 5001', env = { MLFLOW_AUTH_CONFIG_PATH = ".mlflow/basic_auth.ini" } }
clean-mlflow = 'mlflow gc --backend-store-uri sqlite:///.mlflow/mlflow.db'

[tool.ruff.lint.isort]
force-single-line = true
